# CloseCrabAI

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  download_model.bat  installer.iss  run.bat
config/: config.yaml
src/: CloseCrab.h  main.cpp  main_interactive.cpp
src/config/: Config.cpp  Config.h
src/core/: SessionManager.cpp  SessionManager.h  ThreadPool.cpp  ThreadPool.h
src/gui/: MainWindow.cpp  MainWindow.h
src/llm/: LLMEngine.cpp  LLMEngine.h
src/memory/: MemorySystem.cpp  MemorySystem.h
src/network/: HttpServer.cpp  HttpServer.h  WebSocketServer.cpp  WebSocketServer.h
src/rag/: EmbeddingEngine.cpp  EmbeddingEngine.h  HFTokenizer.cpp  HFTokenizer.h  RAGManager.cpp  RAGManager.h  RerankerEngine.cpp  RerankerEngine.h  Wordpiecetokenizer.cpp  Wordpiecetokenizer.h  sqlite_vec_simple.h
src/security/: Sandbox.cpp  Sandbox.h
src/skills/: AnalyzeSkill.h  ClipboardSkill.h  ExecuteCommandSkill.h  OpenAppSkill.h  ReadBinarySkill.h  ReadFileSkill.h  ScreenshotSkill.h  Skill.cpp  Skill.h  SkillChain.h  SkillManager.cpp  SkillManager.h  SystemInfoSkill.h  WeatherSkill.h  WebSearchSkill.cpp  WebSearchSkill.h  WriteFileSkill.h
src/ssd/: SSDExpertStreamer.cpp  SSDExpertStreamer.h
tools/: extract_experts.cpp
